# runx

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  README.md  SECURITY.md  SKILL.md  dogfood_receipt.json  evidence.json  evidence_payload.json  package.json  pnpm-lock.yaml  report.md  report_payload.md  run.sh  run_dogfood.sh  tsconfig.base.json  tsconfig.runtime.json  tsconfig.typecheck.json  verification.json  verification_payload.json  vitest.config.ts  vitest.fast.config.ts  vitest.workspace-aliases.ts
.ai/: OPERATORS.md  (+3 more)
crates/: Cargo.toml  README.md  deny.toml
crates/runx-cli/: Cargo.toml  README.md
crates/runx-cli/src/: add.rs  cli_args.rs  cli_error.rs  command_spec.rs  config.rs  connect.rs  credential.rs  dev.rs  doctor.rs  export.rs  history.rs  kernel.rs  launcher.rs  lib.rs  list.rs  login.rs  login_tests.rs  main.rs  mcp.rs  official_skills.rs  parser.rs  payment.rs  public_api.rs  publish_tests.rs  registry.rs  resume.rs  router.rs  runtime.rs  scaffold.rs  skill.rs  tool.rs  url_add.rs  verify.rs
crates/runx-cli/src/command_spec/: catalog.rs
crates/runx-cli/tests/: connect.rs  credential.rs  doctor.rs  export.rs  harness.rs  integration.rs  kernel.rs  launcher.rs  local_credential.rs  locality.rs  mcp_dogfood.rs  native_no_ts.rs  parser.rs  policy.rs  registry.rs  router.rs  skill.rs  tool.rs  verify.rs  x402_native_dogfood.rs
crates/runx-contracts/: Cargo.toml  README.md
crates/runx-contracts-derive/: Cargo.toml
crates/runx-contracts-derive/src/: lib.rs
crates/runx-contracts/src/: act.rs  act_assignment.rs  act_receipt.rs  artifact.rs  aster.rs  authority.rs  cli.rs  credential_delivery.rs  decision.rs  dev.rs  doctor.rs  execution.rs  external_adapter.rs  fingerprint.rs  fixture.rs  harness.rs  host_protocol.rs  json.rs  ledger.rs  lib.rs  links.rs  list.rs  operational_policy.rs  operational_proposal.rs  output.rs  policy_proof.rs  post_merge_observer.rs  receipt.rs  receipts.rs  redaction.rs  reference.rs  registry.rs  review.rs  run_summary.rs  schema.rs  schema_artifacts.rs  signal.rs  source_packet.rs  target_runner.rs  thread_outbox_provider.rs  (+2 more)
crates/runx-contracts/tests/: act_assignment_fixtures.rs  aster_control_fixtures.rs  credential_delivery_fixtures.rs  doctor_fixtures.rs  example_external_fixture.rs  execution_fixtures.rs  harness_spine_fixtures.rs  host_protocol_fixtures.rs  integration.rs  nitrosend_external_fixture.rs  operational_policy.rs  operational_proposal_fixtures.rs  post_merge_observer.rs  reference.rs  schema_generator_check.rs  schema_validation.rs  schema_wire_compat.rs  schema_wire_conformance.rs  target_runner.rs  thread_outbox_provider_fixtures.rs
crates/runx-core/: Cargo.toml  README.md  api-snapshot.txt
crates/runx-core/src/: kernel_eval.rs  lib.rs  policy.rs  serde_conventions.rs  state_machine.rs
crates/runx-core/tests/: integration.rs  kernel_eval.rs  maturity_parity.rs  policy_fixtures.rs  policy_proptest.rs  state_machine_fixtures.rs  state_machine_proptest.rs
crates/runx-parser/: Cargo.toml  README.md
crates/runx-parser/fuzz/: .gitignore  Cargo.toml
crates/runx-parser/src/: error.rs  graph.rs  install.rs  lib.rs  runner.rs  skill.rs  tool.rs  yaml.rs
crates/runx-parser/tests/: integration.rs  parser_catalog.rs  parser_credentials.rs  parser_fixtures.rs  parser_graph_allowed_tools.rs  parser_rejections.rs  parser_sandbox.rs  parser_source_kind.rs
crates/runx-pay/: Cargo.toml  README.md
crates/runx-pay/src/: authority.rs  ledger.rs  lib.rs  refunds.rs  runtime.rs  state.rs  supervisor.rs
crates/runx-pay/tests/: payment.rs
crates/runx-payments/: Cargo.toml  README.md
crates/runx-payments/src/: authority.rs  lib.rs
crates/runx-receipts/: Cargo.toml  README.md
crates/runx-receipts/benches/: receipt_canonicalization.rs
crates/runx-receipts/examples/: generate_harness_spine_fixtures.rs  generate_receipt_tree_oracle.rs
crates/runx-receipts/src/: canonical.rs  lib.rs  tree.rs  verify.rs
crates/runx-receipts/tests/: conformance.rs  harness_receipts.rs  integration.rs  receipt_tree_fixtures.rs  receipt_verify_corpus.rs
crates/runx-registry-client/: Cargo.toml  README.md
crates/runx-registry-client/src/: http.rs  install.rs  lib.rs  payload.rs  refs.rs  types.rs
crates/runx-registry-client/tests/: client.rs
crates/runx-runtime/: Cargo.toml  README.md
crates/runx-runtime/benches/: graph_throughput.rs
crates/runx-runtime/src/: adapter.rs  adapter_pipeline.rs  adapters.rs  agent_invocation.rs  approval.rs  caller.rs  config.rs  connect.rs  credential_resolver.rs  credentials.rs  dev.rs  doctor.rs  effects.rs  error.rs  execution.rs  export.rs  fanout.rs  graph.rs  host.rs  hosted_http.rs  journal.rs  json_render.rs  lib.rs  lifecycle.rs  list.rs  outbox_provider.rs  packet_validation.rs  parser_eval.rs  path_util.rs  payment.rs  payment_admission.rs  payment_authority.rs  payment_ledger.rs  payment_state.rs  payment_supervisor.rs  post_merge_observer.rs  process.rs  receipt_paths.rs  receipt_store.rs  receipt_tree.rs  (+12 more)
crates/runx-runtime/tests/: a2a_parity.rs  abnormal_seal.rs  agent_parity.rs  approval.rs  catalog_adapter.rs  cli_tool_contract.rs  config.rs  connect_client.rs  connect_policy_integration.rs  connect_secret_redaction.rs  connect_support.rs  credential_delivery.rs  credential_grant_policy.rs  dev.rs  doctor.rs  external.rs  external_adapter.rs  fanout_parity.rs  fanout_proptest.rs  governance_witness.rs  harness_fixtures.rs  hello_graph.rs  integration.rs  journal_history.rs  license_boundary.rs  local_credential_provision.rs  mcp_adapter.rs  mcp_server.rs  parity.rs  payment.rs  payment_execution.rs  payment_finality.rs  payment_ledger_projection.rs  payment_receipts.rs  payment_state.rs  post_merge_observer.rs  receipt_paths.rs  receipt_refs.rs  receipt_signing.rs  receipt_store.rs  (+15 more)
crates/runx-sdk/: Cargo.toml  README.md
crates/runx-sdk/src/: act_assignment.rs  client.rs  command.rs  error.rs  host.rs  lib.rs
crates/runx-sdk/tests/: act.rs  act_assignment.rs  client_cli.rs  host_protocol.rs  integration.rs
(+2097 files in other folders)
