[workspace]
members = [
    "runx-cli",
    "runx-contracts",
    "runx-core",
    "runx-parser",
    "runx-receipts",
    "runx-runtime",
    "runx-sdk",
]
resolver = "3"

[workspace.dependencies]
runx-contracts = { path = "runx-contracts", version = "0.0.1" }
runx-core = { path = "runx-core", version = "0.0.1" }
runx-parser = { path = "runx-parser", version = "0.0.1" }
runx-receipts = { path = "runx-receipts", version = "0.0.1" }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
sha2 = "0.10.9"
thiserror = "2.0.17"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/runxhq/runx"
homepage = "https://runx.ai"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
wildcard_imports = "deny"
