[workspace]
members = [
    "runx-cli",
    "runx-contracts",
    "runx-core",
    "runx-parser",
    "runx-contracts-derive",
    "runx-receipts",
    "runx-runtime",
    "runx-sdk",
]
resolver = "3"

[workspace.dependencies]
runx-contracts = { path = "runx-contracts", version = "0.0.2" }
runx-contracts-derive = { path = "runx-contracts-derive", version = "0.0.1" }
runx-core = { path = "runx-core", version = "0.0.2" }
runx-parser = { path = "runx-parser", version = "0.0.2" }
runx-receipts = { path = "runx-receipts", version = "0.0.1" }
runx-runtime = { path = "runx-runtime", version = "0.0.1" }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_norway = "0.9.42"
sha2 = "0.10.9"
thiserror = "2.0.17"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/runxhq/runx"
homepage = "https://runx.ai"

# Release binaries ship as per-platform npm packages, so size and load time
# matter more than build time. Fat-trimmed defaults keep the distributed
# binary small while staying fully optimized.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
wildcard_imports = "deny"
