[package]
name = "runx-cli"
# Kept in lockstep with packages/cli/package.json (the npm distribution line).
# The release workflow stamps this from the npm manifest before building.
version = "0.5.22"
edition.workspace = true
rust-version.workspace = true
description = "Cargo-installed launcher for the runx governed agent workflow CLI."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["runx", "cli", "agents", "workflow", "receipts"]
categories = ["command-line-utilities", "development-tools"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[lints]
workspace = true

[dependencies]
runx-contracts.workspace = true
runx-runtime = { workspace = true, features = ["cli-tool", "mcp"] }
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "runx"
path = "src/main.rs"

# Debian/Ubuntu packaging (cargo-deb). Built per-arch in CI with --target and
# attached to the GitHub Release.
[package.metadata.deb]
maintainer = "runxhq <support@runx.ai>"
copyright = "2026, runxhq"
extended-description = "Native governed runtime for agent skills, tools, graphs, and packets."
section = "utils"
priority = "optional"
assets = [["target/release/runx", "usr/bin/", "755"]]
