[package]
name = "runx-contracts-derive"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.96", features = ["full", "extra-traits"] }

[lints]
workspace = true
