[package]
# Integration tests compile as a single binary (tests/integration.rs); see
# .scafld/specs/active/test-surface-build-consolidation.md.
autotests = false
name = "runx-contracts"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
description = "Shared Rust contract types for runx JSON and host protocol boundaries."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["runx", "contracts", "agents", "receipts", "sdk"]
categories = ["development-tools"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[lints]
workspace = true

[lib]
name = "runx_contracts"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
runx-contracts-derive.workspace = true

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }
serde_json.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
