[package]
# Integration tests compile as a single binary (tests/integration.rs); see
# .scafld/specs/active/test-surface-build-consolidation.md.
autotests = false
name = "runx-core"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
description = "Pure Rust parity kernel for runx state-machine and policy decisions."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["runx", "kernel", "policy", "agents", "workflow"]
categories = ["development-tools"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[lints]
workspace = true

[dependencies]
runx-contracts.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2.workspace = true
thiserror.workspace = true

[features]
default = ["std"]
std = []

[lib]
name = "runx_core"
path = "src/lib.rs"

[dev-dependencies]
proptest = { version = "1.11.0", default-features = false, features = ["std"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
