[package]
name = "runx-receipts"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "Pure Rust receipt model, canonicalization, and verification parity for runx."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["runx", "receipts", "provenance", "agents", "verify"]
categories = ["development-tools"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[lints]
workspace = true

[dependencies]
runx-contracts.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5.1"
jsonschema = { version = "0.46.5", default-features = false }

[lib]
name = "runx_receipts"
path = "src/lib.rs"

[[bench]]
name = "receipt_canonicalization"
harness = false
