[package]
# Integration tests compile as a single binary (tests/integration.rs); see
# .scafld/specs/active/test-surface-build-consolidation.md.
autotests = false
name = "runx-receipts"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "Pure Rust receipt model, canonicalization, and verification parity for runx."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["runx", "receipts", "provenance", "agents", "verify"]
categories = ["development-tools"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[lints]
workspace = true

[dependencies]
runx-contracts.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64 = "0.22.1"
criterion = "0.5.1"
jsonschema = { version = "0.46.5", default-features = false }
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
ring = "0.17.14"

[lib]
name = "runx_receipts"
path = "src/lib.rs"

[[bench]]
name = "receipt_canonicalization"
harness = false

[[test]]
name = "integration"
path = "tests/integration.rs"
