[package]
name = "runx-registry-client"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "Rust client for the runx hosted registry contract."
publish = false
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["runx", "registry", "skills", "client"]
categories = ["development-tools"]
include = ["Cargo.toml", "README.md", "src/**/*.rs", "tests/**/*.rs"]

[lints]
workspace = true

[dependencies]
runx-parser.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
sha2.workspace = true
thiserror.workspace = true
url = "2.5.7"

[dev-dependencies]
tempfile = "3.23.0"

[lib]
name = "runx_registry_client"
path = "src/lib.rs"
