[package]
name = "runx-runtime"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "Native Rust runtime for local runx execution, adapters, harness replay, receipts, and sandboxing."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["runx", "runtime", "agents", "sandbox", "mcp"]
categories = ["development-tools"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]
# Integration tests are compiled as a single binary (tests/integration.rs) so the
# crate and its heavy deps link once instead of once per test file. Each test file
# is a module of that binary; see .scafld/specs/active/test-surface-build-consolidation.md.
autotests = false

[lints]
workspace = true

[features]
default = []
async-http = ["dep:reqwest", "dep:tokio", "dep:rustls"]
payment-rails = ["async-http"]
cli-tool = ["async-http"]
mcp = ["dep:rmcp", "dep:tokio", "tokio/process", "tokio/io-util", "tokio/sync", "tokio/rt-multi-thread"]
a2a = []
agent = ["async-http", "catalog"]
catalog = ["cli-tool"]
external-adapter = []
http = ["async-http"]

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
runx-contracts.workspace = true
runx-core.workspace = true
runx-parser.workspace = true
runx-receipts.workspace = true
reqwest = { version = "=0.13.3", default-features = false, features = ["rustls-no-provider", "json"], optional = true }
ring = "0.17.14"
# Drive rustls with the ring provider (already linked via `ring`) instead of
# reqwest's default aws-lc-rs, so the vendored aws-lc-sys C crypto blob is not
# compiled in. ring is then the single, unambiguous process-default provider.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
rustix = { version = "1.1.4", features = ["process"] }
rmcp = { version = "=1.7.0", default-features = false, features = ["client", "server"], optional = true }
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { version = "=1.52.3", default-features = false, features = ["rt", "net", "time"], optional = true }
url = "2.5.7"
wait-timeout = "0.2.1"

[dev-dependencies]
criterion = "0.5.1"
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
tempfile = "3.23.0"

[lib]
name = "runx_runtime"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[bench]]
name = "graph_throughput"
harness = false
