[package]
name = "runx-sdk"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "CLI-backed Rust SDK for runx clients and host protocol helpers."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["runx", "sdk", "agents", "cli", "workflow"]
categories = ["api-bindings", "development-tools"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[lints]
workspace = true

[dependencies]
runx-contracts.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lib]
name = "runx_sdk"
path = "src/lib.rs"
